# heifu

./: README.md
heifu_ws/src/catkin_simple/: CMakeLists.txt
heifu_ws/src/heifu/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
heifu_ws/src/heifu/config/: default.yaml
heifu_ws/src/heifu/launch/: display.launch
heifu_ws/src/heifu/meshes/: base_link.dae  perna.dae  pernas.dae  propD.dae  propE.dae
heifu_ws/src/heifu/src/: takeoff (copy).cpp  takeoff.cpp
heifu_ws/src/heifu/urdf/: heifu.urdf
heifu_ws/src/rotors_simulator/rotors_gazebo_plugins/: CMakeLists.txt
heifu_ws/src/rotors_simulator/rotors_gazebo_plugins/include/rotors_gazebo_plugins/: gazebo_imu_plugin.h  gazebo_octomap_plugin.h  gazebo_odometry_plugin.h  gazebo_wind_plugin.h
heifu_ws/src/rotors_simulator/rotors_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_controller_interface.cpp  gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_wind_plugin.cpp
heifu_ws/src/script/: dep-source-dir.sh
